изменил наименование svg файла

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 
                 <div class="col-md-6">
                     <div class="img-block">
-                        <img src="/img/2164246.svg" alt="">
+                        <img src="/img/text-section.svg" alt="">
                     </div>
                 </div>
             </div>
