Обновил путь svg

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap&subset=cyrillic-ext" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css"><script src="https://kit.fontawesome.com/93a99d4398.js" crossorigin="anonymous"></script>
     <title>Чек-лст</title>
 </head>
 <body>
@@ -27,7 +27,7 @@
                 <div class="row">
                     <div class="col-md-6 offset-md-6 col-sm-12">
                         <div class="main-subtitle">
-                            <h5>Я создала «Чек-лист для молодых мам», который полон моих чувств и эмоций.</h5>
+                            <h2>Я создала «Чек-лист для молодых мам», который полон моих чувств и эмоций.</h2>
                         </div>
                     </div>
                 </div>
@@ -52,9 +52,9 @@
                     <div class="cart-block">
 
                         <div class="cart-title">
-                            <h2>
+                            <h3>
                                 Я такая же мама, как и ты!
-                            </h2>
+                            </h3>
                         </div>
 
                         <div class="cart-text">
@@ -72,7 +72,7 @@
                 
                 <div class="col-md-6">
                     <div class="img-block">
-                        <img src="/img/text-section.svg" alt="">
+                        <img src="img/text-section.svg" alt="">
                     </div>
                 </div>
             </div>
@@ -81,7 +81,81 @@
     </section>
 
 
+    <section class="review">
+        <div class="title-review">
+            <h3>О нас говорят</h3>
+        </div>
 
+        
+    </section>
+
+
+    <section class="price">
+        <div class="title-price">
+            <h3>Тарифы</h3>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 col-sm-12">
+                    <div class="price-box">
+                        <div class="price-price"><p>499р.</p></div>
+                        <div class="price-sale"><p>49р.</p></div>
+                        <div class="price-title">Простой</div>
+                        <div class="price-advantages">
+                            <ul>
+                                <li>Товар 1</li>
+                                <li>Товар 2</li>
+                                <li>Товар 3</li>
+                            </ul>
+                        </div>
+                        <div class="price-button">
+                            <a class="normal-bg" href="#">Купить</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-12">
+                    <div class="price-box vip-box">
+                        <div class="price-price vip-price"><p>49999р.</p></div>
+                        <div class="price-sale vip-sale"><p>4999р.</p></div>
+                        <div class="price-title">VIP</div>
+                        <div class="price-advantages">
+                            <ul>
+                                <li class="vip-li" >Товар 1</li>
+                                <li class="vip-li" >Товар 2</li>
+                                <li class="vip-li" >Товар 3</li>
+                            </ul>
+                        </div>
+                        <div class="price-button">
+                            <a class="vip-button" href="#">Купить</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-12">
+                    <div class="price-box">
+                        <div class="price-price"><p>4999р.</p></div>
+                        <div class="price-sale"><p>499р.</p></div>
+                        <div class="price-title">Продвинутый</div>
+                        <div class="price-advantages">
+                            <ul>
+                                <li>Товар 1</li>
+                                <li>Товар 2</li>
+                                <li>Товар 3</li>
+                            </ul>
+                        </div>
+                        <div class="price-button">
+                            <a class="normal-bg" href="#">Купить</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <script
+  src="https://code.jquery.com/jquery-3.5.0.min.js"
+  integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ="
+  crossorigin="anonymous"></script>
     <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
