Добавил виджет Инстаграмм

--- a/index.html
+++ b/index.html
@@ -84,6 +84,14 @@
     <section class="review">
         <div class="title-review">
             <h3>О нас говорят</h3>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-0539b117-6ba0-40cb-8044-062be5d22f66"></div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         
