--- a/index.html
+++ b/index.html
@@ -160,10 +160,25 @@
 
     </section>
 
+    <section class="foto">
+        <div class="title-foto">
+            <h3>Подпишись</h3>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-b3dc567a-ea9a-4678-ab72-a7597c5cf2b5"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script
   src="https://code.jquery.com/jquery-3.5.0.min.js"
   integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ="
   crossorigin="anonymous"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
