Добавил раздел "Подпишись"

--- a/index.html
+++ b/index.html
@@ -164,11 +164,19 @@
         <div class="title-foto">
             <h3>Подпишись</h3>
         </div>
+        <div class="profile">
+            <a href="https://www.instagram.com/portnova.anna.m/" class="profile-img">
+                <img src="img/profile.jpg" alt="">
+                <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" style="enable-background:new -580 439 577.9 194;"
+                xml:space="preserve">  
+                <circle cx="50" cy="50" r="40" />
+                </svg>
+            </a>
+        </div>
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-<div class="elfsight-app-b3dc567a-ea9a-4678-ab72-a7597c5cf2b5"></div>
+                    <div id="instafeed"></div>
                 </div>
             </div>
         </div>
@@ -178,6 +186,7 @@
   src="https://code.jquery.com/jquery-3.5.0.min.js"
   integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ="
   crossorigin="anonymous"></script>
+    <script src="js/jquery.instagramFeed.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
 </body>
