Добавил директорию page и файл pay.html

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             </ul>
                         </div>
                         <div class="price-button">
-                            <a class="normal-bg" href="#">Купить</a>
+                            <a class="normal-bg" href="page/pay.html">Купить</a>
                         </div>
                     </div>
                 </div>
