--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             </ul>
                         </div>
                         <div class="price-button">
-                            <a class="normal-bg" href="page/pay.html">Купить</a>
+                            <a class="normal-bg" href="https://auth.robokassa.ru/Merchant/Index.aspx?MerchantLogin=Check-list&InvId=0&Culture=ru&Encoding=utf-8&Description=%D0%A7%D0%B5%D0%BA-%D0%BB%D0%B8%D1%81%D1%82&OutSum=49&SignatureValue=d38fc7aed4fd6c48e09862c326fdcf86">Купить</a>
                         </div>
                     </div>
                 </div>
