--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                             </ul>
                         </div>
                         <div class="price-button">
-                            <a class="vip-button" href="#">Купить</a>
+                            <a class="vip-button" href="https://money.yandex.ru/quickpay/shop-widget?writer=seller&targets=%D0%A7%D0%B5%D0%BA-%D0%BB%D0%B8%D1%81%D1%82&targets-hint=&default-sum=49&button-text=12&payment-type-choice=on&mobile-payment-type-choice=on&hint=&successURL=&quickpay=shop&account=410012221009534">Купить</a>
                         </div>
                     </div>
                 </div>
@@ -279,7 +279,6 @@
     <script src="js/jquery.instagramFeed.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
-    <script src="js/scroll.js"></script>
     <script src="js/slider.js"></script>
 </body>
 </html>
