--- a/index.html
+++ b/index.html
@@ -223,11 +223,7 @@
                             </ul>
                         </div>
                         <div class="price-button">
-                            <iframe src="https://money.yandex.ru/quickpay/shop-widget?writer=seller&targets=%D0%A7%D0%B5%D0%BA-%D0%BB%D0%B8%D1%81%D1%82&targets-hint=&default-sum=49&button-text=12&payment-type-choice=on&mobile-payment-type-choice=on&hint=&successURL=&quickpay=shop&account=410012221009534" 
-                                width="423" height="222" 
-                                frameborder="0" allowtransparency="true" 
-                                scrolling="no">
-                            </iframe>
+                            <iframe src="https://money.yandex.ru/quickpay/button-widget?targets=%D0%A7%D0%B5%D0%BA-%D0%BB%D0%B8%D1%81%D1%82&default-sum=49&button-text=11&any-card-payment-type=on&button-size=m&button-color=orange&successURL=&quickpay=small&account=410012221009534&" width="184" height="36" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
                             <!-- <a class="vip-button" href="https://money.yandex.ru/quickpay/shop-widget?writer=seller&targets=%D0%A7%D0%B5%D0%BA-%D0%BB%D0%B8%D1%81%D1%82&targets-hint=&default-sum=49&button-text=12&payment-type-choice=on&mobile-payment-type-choice=on&hint=&successURL=&quickpay=shop&account=410012221009534">Купить</a> -->
                         </div>
                     </div>
