--- a/index.html
+++ b/index.html
@@ -215,9 +215,9 @@
                             <input type="hidden" name="quickpay-form" value="small">    
                             <input type="hidden" name="targets" value="транзакция {order_id}">  <!-- Назначение платежа -->
                                
-                            <input type="hidden" name="comment" value="Хотелось бы получить дистанционное управление.">    
-                            <input type="hidden" name="need-fio" value="true">    
-                            <input type="hidden" name="need-email" value="true">    
+                            <input type="hidden" name="comment" value="Пакет <Простой>">    
+                            <input type="hidden" name="need-fio" value="false">    
+                            <input type="hidden" name="need-email" value="false">    
                             <input type="hidden" name="need-phone" value="false">    
                             <input type="hidden" name="need-address" value="false">    
                             <div class="price-button">
